# KinematicBicycleModel

./: .gitignore  Dockerfile.base  README.md  make_all_executable.sh  requirements.txt  setup_environments.sh
.devcontainer/: .p10k.zsh  devcontainer.json
catkin_ws/src/bicycle-model/: CMakeLists.txt  package.xml  setup_venv.sh
catkin_ws/src/bicycle-model/launch/: bicycle_model.launch
catkin_ws/src/bicycle-model/scripts/: animate.py
catkin_ws/src/estimation_msg/: CMakeLists.txt  package.xml
catkin_ws/src/estimation_msg/msg/: StateEstimation.msg  StateEstimationStamped.msg
catkin_ws/src/simulation/bicycle-model/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/simulation/bicycle-model/launch/: animation.launch  simulation.launch
catkin_ws/src/simulation/bicycle-model/scripts/: animate.py  bicycle_model.py  simulation.py  stanley_controller.py  watchdog.py
